# bricks

./: .gitignore  .travis.yml  CNAME  Gemfile  Makefile  Procfile  README.md  _config.yml  deploy.bash  gt-class.json  index.css  index.html  index.js  manage.py  programming.md  requirements.txt  shell.nix  stack.yaml  watch.sh
_data/: georgia-tech.yml
_includes/: footer.html  header.html
_layouts/: post.html
_posts/: 2006-02-12-the-great-macropod-exodus.md  2008-04-24-fun-with-find.md  2008-05-04-smalltalk-go-away.md  2008-09-19-kernels-vectors-graphs.md  2008-11-03-last-minute-math.md  2009-06-19-a-mathematicians-lament.md  2009-06-20-randomization-pipeline.md  2010-03-03-randomization-pipeline.md  2010-08-05-javac-bug-report.md  2012-12-15-bunny-vine.md  2013-08-03-pencil-effects.md  2013-10-22-correctness-scala.md  2013-11-03-the-little-libraries.md  2013-12-31-georgia-tech.md  2014-01-08-such-commit-wow.md  2014-08-03-new-website-with-jekyll.markdown  2014-08-03-new-website-with-jekyll.md  2014-08-03-unwanted-haskell-triangle.md  2014-08-04-unwanted-haskell-triangle.md  2015-03-11-adjacency.md  2015-08-08-gradle-scala-repl.md  2015-08-09-dynamic-typing.md  2015-08-24-intro-scala-pitfalls.md  2015-09-27-installing-nixos.md  2016-08-31-installing-nix-package-manager.md  2016-10-05-nixos-on-digitalocean.md
_site/: feed.xml  index.html
_site/assets/: main.css
_site/georgia-tech/: index.html
_site/programming/: index.html
assets/: georgia-tech.css  main.css
bricks/: bricks.cabal  package.yaml
bricks-internal/: bricks-internal.cabal  package.yaml
bricks-internal-test/: bricks-internal-test.cabal  package.yaml
bricks-internal/src/Bricks/Internal/: List.hs  Map.hs  Prelude.hs  Seq.hs  Text.hs
bricks-internal/test/: doctest.hs
bricks-parsec/: bricks-parsec.cabal  package.yaml
bricks-parsec/src/Bricks/: Parsec.hs
bricks-parsec/test/: cases.hs
bricks-rendering/: bricks-rendering.cabal  package.yaml
bricks-rendering/src/Bricks/: Rendering.hs
bricks-rendering/test/: cases.hs
bricks-syntax/: bricks-syntax.cabal  package.yaml  readme.md
bricks-syntax/src/Bricks/: Expression.hs  IndentedString.hs  Keyword.hs  Source.hs
bricks-syntax/src/Bricks/Expression/: Construction.hs
bricks-syntax/src/Bricks/Syntax/: Abstract.hs  Concrete.hs  Source.hs
bricks-syntax/src/Bricks/Syntax/Concrete/: Identifier.hs  Keyword.hs
bricks-syntax/test/: show.hs
bricks/app/: Main.hs
bricks/src/: Bricks.hs
bricks/src/Bricks/: Bare.hs  BuiltinFunctions.hs  Evaluation.hs  Expression.hs  ExpressionToTerm.hs  Identifiers.hs  IndentedString.hs  Keyword.hs  Keywords.hs  Parsing.hs  Prelude.hs  Rendering.hs  Source.hs  StringExpressions.hs  Term.hs  Type.hs  Types.hs  UnquotedString.hs
bricks/src/ChrisMartinOrg/: CommandLineOpts.hs  Hash.hs  NixLike.hs  Post.hs
bricks/test/: doctest.hs  evaluation.hs  parsing.hs  rendering.hs
chris-martin-org/: package.yaml
chris-martin-org/app/: Main.hs
chris-martin-org/src/ChrisMartinOrg/: CommandLineOpts.hs  Content.hs  Nix.hs  NixLike.hs
chris_martin_org/: georgia-tech.html  index.html  models.py  settings.py  urls.py  views.py  wsgi.py
chris_martin_org/_includes/: head.html
chris_martin_org/fixtures/: initial_data.yaml
chris_martin_org/static/: base.css  home.css
chris_martin_org/static/georgia-tech/: index.html
chris_martin_org/templates/: base.html  home.html  school.html
data/: gt-class.css  gt-class.html  gt-class.js  gt-class.json  index.html  whatever.json
georgia-tech/css/: app.css
georgia-tech/js/: controllers.js
hs/: chris-martin-org.cabal  chris-martin-org.nix  default.nix  package.yaml  stack.yaml
hs/app/: Main.hs
hs/src/: ChrisMartinOrg.hs
hs/src/ChrisMartinOrg/: Chron.hs  Content.hs  Core.hs  Css.hs  Hash.hs  Home.hs  Post.hs  PostDate.hs  Prelude.hs  Redirect.hs
hs/src/ChrisMartinOrg/Content/: Parse.hs
hs/src/ChrisMartinOrg/Core/: Chron.hs
hs/src/ChrisMartinOrg/Post/: Body.hs  Page.hs  Parse.hs
hs/test/: test.hs
in/: global.scss
in/home/: content.md  content.nix  home.scss
in/index/: content.md  style.scss
in/posts/: post.nix  post.scss  readme.md
in/posts/2006-macropod/: post.md  post.nix
in/posts/2008-04-find/: command.sh  post.md  post.nix  result.txt
in/posts/2008-05-smalltalk/: post.md  post.nix
in/posts/2008-09-kernels/: post.md  post.nix
in/posts/2008-11-last-minute/: post.md  post.nix
in/posts/2009-06-19-math-lament/: post.md  post.nix  quote1.md  quote2.md  quote3.md  quote4.md
in/posts/2009-06-20-randomization/: choose-many.sh  choose-one.sh  histogram-many.txt  histogram-one.txt  naive.sh  post.md  post.nix
in/posts/2010-javac-bug/: post.md  post.nix
in/posts/2012-bunny-vine/: post.md  post.nix
in/posts/2013-08-pencil/: post.html  post.md  post.nix
in/posts/2013-10-correctness/: correctness.scala  correctness.scss  post.md  post.nix
in/posts/2013-11-little-libs/: post.md  post.nix
in/posts/2013-12-georgia-tech/: georgia-tech.scss  post.md  post.nix
in/posts/2014-01-such-commit/: post.md  post.nix  tweet.html
in/posts/2014-08-haskell-triangle/: main-revised.hs  main.hs  post.md  post.nix  tweet-franklinchen.html  tweet1.html  tweet2.html
in/posts/2015-03-adjacency/: post.md  post.nix
in/posts/2015-08-08-gradle-scala/: build.gradle  post.md  post.nix
in/posts/2015-08-09-dynamic-typing/: package.yaml  post.md  post.nix  tweet.html
in/posts/2015-08-24-scala-pitfalls/: post.md  post.nix
in/posts/2015-09-installing-nixos/: installing-nixos.scss  post.md  post.nix  tweet.html
in/posts/2016-08-31-installing-nix/: post.md  post.nix
in/posts/2016-10-05-nixos-digitalocean/: nixos-digitalocean.scss  post.md  post.nix
in/posts/2017-02-18-ghc-pr/: post.md  post.nix
in/posts/2017-02-18b-water-monoids/: post.md  water.sh
in/posts/2017-02-20-water-monoids/: Area.hs  Endo.hs  Face.hs  Monoid.hs  Multiplication.hs  Structure-Monoid.hs  Structure.hs  Subtraction.hs  post.md  (+7 more)
static/georgia-tech/: courses.json
test-data/: expression-show-examples.bricks  expression-show-examples.txt  standard-format-bricks-examples.bricks
(+34 files in other folders)
