name: bricks-internal
version: 0.0.0.3
category: Language
synopsis: ...

description:
  ...

homepage:    https://github.com/chris-martin/bricks#readme
bug-reports: https://github.com/chris-martin/bricks/issues

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin <ch.martin@gmail.com>

license: Apache-2.0
license-file: license.txt

build-type: Simple
cabal-version: >= 1.10

source-repository head
  type: git
  location: https://github.com/chris-martin/bricks

library
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

  exposed-modules:
      Bricks.Internal.List
      Bricks.Internal.Map
      Bricks.Internal.Prelude
      Bricks.Internal.Seq
      Bricks.Internal.Text

  build-depends:
      base >=4.9 && <4.11
    , containers >=0.5.7 && <0.6
    , text >=1.2.2 && <1.3

test-suite doctest
  type: exitcode-stdio-1.0
  main-is: doctest.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded
  default-language: Haskell2010

  build-depends:
      base >=4.9 && <4.10
    , containers >=0.5.7 && <0.6
    , doctest >=0.11 && <0.14
    , either-list-functions ==0.0.0.1
    , text >=1.2.2 && <1.3
