name: bricks-syntax
version: 0.0.0.3
category: Language
synopsis: ...

description:
  ...

homepage:    https://github.com/chris-martin/bricks
bug-reports: https://github.com/chris-martin/bricks/issues

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin <ch.martin@gmail.com>

license: Apache-2.0
license-file: license.txt

build-type: Simple
cabal-version: >= 1.10

data-files:
  ../test-data/expression-show-examples.bricks

source-repository head
  type: git
  location: https://github.com/chris-martin/bricks

library
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

  exposed-modules:
      Bricks.Syntax.Abstract
      Bricks.Syntax.Concrete.Identifier
      Bricks.Syntax.Concrete.Keyword
      Bricks.Syntax.Source

  build-depends:
      base >=4.9 && <4.11
    , bricks-internal
    , containers >=0.5.7 && <0.6
    , partial-semigroup >=0.3 && <0.4
    , text >=1.2.2 && <1.3

test-suite doctest
  type: exitcode-stdio-1.0
  main-is: doctest.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded
  default-language: Haskell2010

  build-depends:
      base >=4.9 && <4.11
    , bricks-internal
    , containers >=0.5.7 && <0.6
    , doctest >=0.11 && <0.14
    , partial-semigroup >=0.3 && <0.4
    , text >=1.2.2 && <1.3
