name:                  chris-martin-org
version:               0.1.0.0
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ChrisMartinOrg
                     , ChrisMartinOrg.Chron
                     , ChrisMartinOrg.Core
                     , ChrisMartinOrg.Css
                     , ChrisMartinOrg.Home
                     , ChrisMartinOrg.Post
  build-depends:       base >= 4.7 && < 5
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , containers
                     , cryptonite
                     , data-default
                     , directory
                     , filepath
                     , highlighting-kate
                     , hsass
                     , lens
                     , markdown
                     , text
                     , time
                     , unix
                     , validation
  default-language:    Haskell2010

executable site
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chris-martin-org
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , HUnit
                     , test-framework
                     , test-framework-hunit
                     , doctest
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chris-martin/chris-martin.org
